--- a/.gitignore
+++ b/.gitignore
@@ -15,9 +15,12 @@
 *.user
 .DS_Store
 .build/
+.build_debug/
+.build_release/
 .ycm_extra_conf.py*
 /html/
 /roadfighter
+/roadfighter.app
 Debug/
 build/
 proguard-project.txt
