--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,11 +19,18 @@ endif()
 
 set( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11" )
 
-find_package(PkgConfig)
-find_package(SDL REQUIRED)
-find_package(SDL_image REQUIRED)
-find_package(SDL_mixer REQUIRED)
-find_package(SDL_ttf REQUIRED)
+if( CMAKE_BUILD_PLATFORM STREQUAL "Emscripten" )
+    set( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -s USE_SDL=1 -s USE_SDL_IMAGE=1 -s STB_IMAGE=1 -s TOTAL_MEMORY=32000000" )
+    set( CMAKE_EXE_LINKER_FLAGS "-o index.html --embed-file arkanoidsb.pak" )
+endif()
+
+if(NOT CMAKE_BUILD_PLATFORM)
+    find_package(PkgConfig)
+    find_package(SDL REQUIRED)
+    find_package(SDL_image REQUIRED)
+    find_package(SDL_mixer REQUIRED)
+    find_package(SDL_ttf REQUIRED)
+endif()
 
 include_directories(
     ${SDL_INCLUDE_DIRS}
@@ -48,7 +55,7 @@ configure_file(
     "${CMAKE_CURRENT_SOURCE_DIR}/src/Config.h"
     )
 
-if(APPLE)
+if(APPLE AND NOT CMAKE_BUILD_PLATFORM)
     list( REMOVE_ITEM GAME_SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/src/Assets.cpp")
     set(GAME_SOURCES ${GAME_SOURCES} "src/Assets.mm")
 
